2005-10-03  Vivek Jain <jvivek@novell.com>

	* em-junk-filter.c: added (e_plugin_lib_enable)
	calls init here to initialize all settings
	**Fixes #317792
	unref GConfClient in finalize
	
2005-08-23  Not Zed  <NotZed@Ximian.com>

	* em-junk-filter.c (em_junk_sa_report_non_junk): pre-define.

2005-07-06  Vivek Jain <jvivek@novell.com>
	
	* Makefile.am: Use NO_UNDEFINED. Link with more libraries.

2005-07-06  Vivek Jain <jvivek@novell.com>

	 sa-junk-plugin : plugin that uses spam assasin for junk mail
	 handling
	 moved em-junk-filter.c from mail/ to here and modified it to listen
	 to the callbacks from the plugin.
	 
