@@ -1,3 +1,10 @@
+2005-10-06  Vivek Jain <jvivek@novell.com>
+	
+	** See Bug #268852
+	* em-junk-filter.c : (em_junk_sa_run_spamd)
+	allow max one chid to be spawned for 
+	spamd. 
+
 2005-10-03  Vivek Jain <jvivek@novell.com>
 
 	* em-junk-filter.c: added (e_plugin_lib_enable)
